# telethon_service_bot

./: .gitignore  Dockerfile  README.md  auth.py  docker-compose.yaml  main.py  pyproject.toml
database/: db.py  engine.py  models.py
migrations/: env.py
migrations/versions/: 5a9de2545538_.py
tools/: conf.py
